--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-markdown": "^9.0.0",
     "react-modal": "^3.16.1",
     "react-simplemde-editor": "^5.2.0",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.6",
